--- a/ilgapps/templates/base.html
+++ b/ilgapps/templates/base.html
@@ -229,7 +229,7 @@
 
                         <i class="icon-fenlei"><img src="{% static "image/ic_quanyiguanli.png" %}"/></i>
 
-                        <span class="title">模式管理</span>
+                        <span class="title">菜品特征管理</span>
 
                         <span class="arrow "></span>
 
@@ -240,7 +240,7 @@
                         <li id="offer-goods-feature">
 
                             <a href="/offer/showGoodsFeature/">
-                                菜品特征管理
+                                特征管理
                             </a>
 
                         </li>
